	  of the SQL module.
	* Add radmin command "show client list verbose", which gives a lot
	  more information about each client.
	* Add support for EAPS-AKA authentication to rlm_wimax.
	  Fixes #3801. Patches from Benjamin Thompson.
	* Add rlm_rest support for HTTP/2.
	* Add REST-HTTP-Status-Code attribute holding HTTP status code.
	* Add option to set http_negotiation in rlm_rest.  Fixes #2821.

	Bug fixes
	* Respect the "log_reject" configuration item in more places.
	  Fixes #3352.  This lowers the number of "Login incorrect"
	  messages when "log_reject = no".
	* Fix rpmbuild for Centos > 6.  Patch from Matthew Newton.
	* Run Post-Proxy-Type Fail... when all home servers are down.
	* Note that rlm_replicate can only use UDP, and not TCP or TLS.
	* DHCP pool lookup is now keyed by Client Identifier (Option 61) when
	  supplied by client, otherwise the hardware address is used. Compliant
	  with RFC 2132. This change will not affect existing systems on upgrade,
	  but new installations will use the new behavior.
	  Patch from Terry Burton.
	* Fix minor spelling mistakes in man pages.  Patch from
	  Alexander Scheel.
	* Don't print invalid tags in rlm_cache, among other places.
	  Fixes #3491
	* Do home_server failover immediately when an initial TCP / Radsec
	  connection fails.
	* Port EAP-PWD constant time fixes from "master" branch.  The issue
	  was verified by Mohamed Sabt, and a patch supplied by
	  Daniel De Almeida Braga.
	* Clear error on SQLITE_BUSY to prevent memory leak in corner cases.
	  Patch from Nick Porter.
	* Properly add SQL clients to virtual servers.
	* Update documentation for cert generation.  Patch from Alexander Scheel.
	* Use better API when decoding DHCP packets, to avoid unnecessary work.
	  This improves performance noticably.
	* Parse locale-dependent dates.  Fixes #3602.
	* Strip out "-frecord-gcc-switches" from rlm_python3 configure build. Fixes #3693
	* Fix radiusd.conf ENV LD_PRELOAD function.