@@ -52,6 +52,7 @@ FreeRADIUS 3.0.22 Tue 24 Mar 2020 12:00:00 EDT urgency=low
 	* Add rlm_rest support for HTTP/2.
 	* Add REST-HTTP-Status-Code attribute holding HTTP status code.
 	* Add option to set http_negotiation in rlm_rest.  Fixes #2821.
+	* Add new 'logfile' rlm_redis option to redirect all REDIS queries to a logfile. Closes #1114
 
 	Bug fixes
 	* Respect the "log_reject" configuration item in more places.
